--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,13 @@ tiktoken = "^0.5.1"
 py-cord = "^2.4.1"
 celery = "^5.3.4"
 redis = "^5.0.1"
+beautifulsoup4 = "^4.12.3"
+pytube = "^15.0.0"
+yt-dlp = "^2024.8.6"
+newspaper4k = "^0.9.3.1"
+lxml = {extras = ["html-clean"], version = "^5.3.0"}
+nltk = "3.9"
+pymupdf = "^1.24.10"
 
 
 [build-system]
